--- a/frontend/src/locales/zhHans.json
+++ b/frontend/src/locales/zhHans.json
@@ -3,5 +3,31 @@
         "welcome": "欢迎使用",
         "getStarted": "开始使用",
         "learnUsage": "查看教程"
+    },
+    "system": {
+        "moreLanguage": "更多语言"
+    },
+    "login": {
+        "title": "登陆至您的帐户",
+        "usernameOrEmail": "用户名或邮箱",
+        "password": "密码",
+        "rememberMe": "记住我",
+        "forgetPassword": "忘记密码？",
+        "login": "登陆",
+        "noAccount": "没有帐户？",
+        "signup": "立即注册",
+        "loginFailed": "用户名或密码错误"
+    },
+    "signup": {
+        "title": "创建您的帐户",
+        "username": "用户名",
+        "email": "电子邮箱",
+        "password": "密码",
+        "signup": "注册",
+        "hasAccount": "已经拥有账户？",
+        "login": "立即登录",
+        "errorTitle": "注册失败",
+        "usernameError": "用户名已被使用",
+        "emailError": "邮箱已被使用"
     }
 }
